Fix for Message Success but still failed and in ErrorStorage (#9083)
Backport of #8214