@@ -29,9 +29,11 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 import static org.junit.jupiter.api.Assumptions.assumeFalse;
 import static org.mockito.ArgumentCaptor.forClass;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.atLeastOnce;
@@ -60,10 +62,10 @@ import java.util.concurrent.Semaphore;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import jakarta.jms.Destination;
+import jakarta.jms.JMSException;
 import jakarta.jms.TextMessage;
 
 import org.junit.jupiter.api.AfterEach;
@@ -75,6 +77,7 @@ import org.junit.jupiter.api.TestInfo;
 import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.ArgumentCaptor;
 import org.mockito.stubbing.Answer;
@@ -82,12 +85,18 @@ import org.mockito.stubbing.Answer;
 import lombok.Lombok;
 import org.apache.logging.log4j.Logger;
 import org.springframework.beans.factory.DisposableBean;
-import org.springframework.core.task.SimpleAsyncTaskExecutor;
+import org.springframework.context.ApplicationContext;
+import org.springframework.core.task.TaskExecutor;
+import org.springframework.transaction.PlatformTransactionManager;
 import org.springframework.transaction.TransactionDefinition;
 import org.springframework.transaction.TransactionStatus;
 import org.springframework.transaction.jta.JtaTransactionManager;
+import org.springframework.transaction.support.AbstractPlatformTransactionManager;
 import org.springframework.transaction.support.DefaultTransactionDefinition;
+import org.springframework.transaction.support.TransactionSynchronization;
+import org.springframework.transaction.support.TransactionSynchronizationManager;
 
+import org.frankframework.configuration.ConfigurationWarnings;
 import org.frankframework.core.Adapter;
 import org.frankframework.core.IListener;
 import org.frankframework.core.IListenerConnector;
@@ -116,14 +125,14 @@ import org.frankframework.testutil.TestAppender;
 import org.frankframework.testutil.TestAssertions;
 import org.frankframework.testutil.TestConfiguration;
 import org.frankframework.testutil.TransactionManagerType;
+import org.frankframework.testutil.mock.ConnectionFactoryFactoryMock;
 import org.frankframework.testutil.mock.DataSourceFactoryMock;
 import org.frankframework.util.LogUtil;
-import org.frankframework.util.MessageKeeperMessage;
 import org.frankframework.util.RunState;
 
 @Tag("slow")
 public class ReceiverTest {
-	public static final DefaultTransactionDefinition TRANSACTION_DEFINITION = new DefaultTransactionDefinition(TransactionDefinition.PROPAGATION_REQUIRES_NEW);
+	public static final DefaultTransactionDefinition TX_REQUIRES_NEW = new DefaultTransactionDefinition(TransactionDefinition.PROPAGATION_REQUIRES_NEW);
 	protected static final Logger LOG = LogUtil.getLogger(ReceiverTest.class);
 	private TestConfiguration configuration;
 	private String adapterName;
@@ -140,7 +149,7 @@ public class ReceiverTest {
 	}
 
 	@AfterEach
-	@Timeout(value = 10, unit = TimeUnit.SECONDS) //Unfortunately this doesn't work on other threads
+	@Timeout(value = 10) //Unfortunately this doesn't work on other threads
 	void tearDown() {
 		if (configuration != null) {
 			configuration.close();
@@ -173,12 +182,14 @@ public class ReceiverTest {
 
 	public <M> Receiver<M> setupReceiver(IListener<M> listener) {
 		@SuppressWarnings("unchecked")
-		Receiver<M> receiver = configuration.createBean(Receiver.class);
+		Receiver<M> receiver = spy(configuration.createBean(Receiver.class));
 		configuration.autowireByName(listener);
 		receiver.setListener(listener);
 		receiver.setName("receiver");
 		receiver.setStartTimeout(2);
 		receiver.setStopTimeout(2);
+		// To speed up test, we don't actually sleep
+		doNothing().when(receiver).suspendReceiverThread(anyInt());
 		DummySender sender = configuration.createBean(DummySender.class);
 		receiver.setSender(sender);
 		return receiver;
@@ -189,7 +200,6 @@ public class ReceiverTest {
 	}
 
 	public <M> Adapter setupAdapter(Receiver<M> receiver, ExitState exitState) throws Exception {
-
 		Adapter adapter = spy(configuration.createBean(Adapter.class));
 		adapter.setName(adapterName);
 
@@ -218,13 +228,16 @@ public class ReceiverTest {
 	}
 
 	public Receiver<String> setupReceiverWithMessageStoreListener(MessageStoreListener<String> listener, ITransactionalStorage<Serializable> errorStorage) {
-		Receiver<String> receiver = configuration.createBean(Receiver.class);
+		@SuppressWarnings("unchecked")
+		Receiver<String> receiver = spy(configuration.createBean(Receiver.class));
 		receiver.setListener(listener);
 		receiver.setName("receiver");
 		DummySender sender = configuration.createBean(DummySender.class);
 		receiver.setSender(sender);
 		receiver.setErrorStorage(errorStorage);
 		receiver.setNumThreads(2);
+		// To speed up test, we don't actually sleep
+		doNothing().when(receiver).suspendReceiverThread(anyInt());
 		return receiver;
 	}
 
@@ -245,20 +258,25 @@ public class ReceiverTest {
 	}
 
 	public ITransactionalStorage<Serializable> setupErrorStorage() {
-		JdbcTransactionalStorage txStorage = mock(JdbcTransactionalStorage.class);
+		//noinspection unchecked
+		JdbcTransactionalStorage<Serializable> txStorage = mock(JdbcTransactionalStorage.class);
 		txStorage.setDataSourceFactory(new DataSourceFactoryMock());
 		return txStorage;
 	}
 
 	public static Stream<Arguments> transactionManagers() {
 		return Stream.of(
-			Arguments.of(supplier(ReceiverTest::buildNarayanaTransactionManagerConfiguration))
+			Arguments.of(supplier(ReceiverTest::buildNarayanaTransactionManagerConfiguration)),
+			Arguments.of(supplier(ReceiverTest::buildDataSourceTransactionManagerConfiguration))
 		);
 	}
 
 	private static TestConfiguration buildNarayanaTransactionManagerConfiguration() {
-		TestConfiguration configuration =  buildConfiguration(TransactionManagerType.NARAYANA);
-		return configuration;
+		return buildConfiguration(TransactionManagerType.NARAYANA);
+	}
+
+	private static TestConfiguration buildDataSourceTransactionManagerConfiguration() {
+		return buildConfiguration(TransactionManagerType.DATASOURCE);
 	}
 
 	private static TestConfiguration buildConfiguration(TransactionManagerType txManagerType) {
@@ -294,15 +312,10 @@ public class ReceiverTest {
 		Receiver<jakarta.jms.Message> receiver = setupReceiver(listener);
 		receiver.setErrorStorage(errorStorage);
 
-		final JtaTransactionManager txManager = configuration.getBean(JtaTransactionManager.class);
-		txManager.setDefaultTimeout(1);
+		final PlatformTransactionManager txManager = configuration.getBean("txManagerReal", PlatformTransactionManager.class);
+		((AbstractPlatformTransactionManager)txManager).setDefaultTimeout(1);
 		receiver.setTxManager(txManager);
 		receiver.setTransactionAttribute(TransactionAttribute.REQUIRED);
-
-		// assume there was no connectivity, the message was not able to be stored in the database, retryInterval keeps increasing.
-		final Field retryIntervalField = Receiver.class.getDeclaredField("retryInterval");
-		retryIntervalField.setAccessible(true);
-		retryIntervalField.set(receiver, 2);
 
 		Adapter adapter = setupAdapter(receiver);
 
@@ -318,7 +331,7 @@ public class ReceiverTest {
 
 		TextMessage jmsMessage = mock(TextMessage.class);
 		doReturn("dummy-message-id").when(jmsMessage).getJMSMessageID();
-		doReturn(receiver.getMaxDeliveries() + 1).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
+		doReturn(receiver.getMaxRetries() + 2).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
 		doReturn(Collections.emptyEnumeration()).when(jmsMessage).getPropertyNames();
 		doReturn("message").when(jmsMessage).getText();
 		RawMessageWrapper<jakarta.jms.Message> messageWrapper = new RawMessageWrapper<>(jmsMessage, "dummy-message-id", "dummy-cid");
@@ -339,7 +352,8 @@ public class ReceiverTest {
 				try {
 					int nrTries = 0;
 					while (nrTries++ < NR_TIMES_MESSAGE_OFFERED) {
-						final TransactionStatus tx = txManager.getTransaction(TRANSACTION_DEFINITION);
+						final TransactionStatus tx = txManager.getTransaction(TX_REQUIRES_NEW);
+						//noinspection unchecked
 						reset(errorStorage, listener);
 						when(errorStorage.storeMessage(any(), any(), any(), any(), any(), any()))
 							.thenAnswer(invocation -> {
@@ -360,7 +374,7 @@ public class ReceiverTest {
 							if (tx.isRollbackOnly()) {
 								rolledBackTXCounter.incrementAndGet();
 							} else {
-								LOG.warn("I had expected TX to be marked for rollback-only by now?");
+								LOG.debug("Main TX not marked for rollback-only.");
 							}
 							if (!tx.isCompleted()) {
 								// We do rollback inside the Receiver already but if the TX is aborted
@@ -368,10 +382,9 @@ public class ReceiverTest {
 								txNotCompletedAfterReceiverEnds.incrementAndGet();
 								txManager.rollback(tx);
 							}
-							retryIntervalField.set(receiver, 2); // To avoid test taking too long.
 						}
 					}
-				} catch (SenderException | IllegalAccessException| IllegalArgumentException e) {
+				} catch (SenderException | IllegalArgumentException e) {
 					throw Lombok.sneakyThrow(e);
 				} finally {
 					semaphore.release();
@@ -383,10 +396,13 @@ public class ReceiverTest {
 		mockListenerThread.start();
 		semaphore.acquire(); // Wait until thread is finished.
 
-		((DisposableBean) txManager).destroy();
+		if (txManager instanceof DisposableBean disposableBean) {
+			disposableBean.destroy();
+		}
 
 		// Assert
 		assertAll(
+			() -> assertEquals(3, receiver.getMaxRetries()),
 			() -> assertEquals(0, rolledBackTXCounter.get(), "rolledBackTXCounter: Mismatch in nr of messages marked for rollback by TX manager"),
 			() -> assertEquals(NR_TIMES_MESSAGE_OFFERED, processedNoException.get(), "processedNoException: Mismatch in nr of messages processed without exception from receiver"),
 			() -> assertEquals(0, txRollbackOnlyInErrorStorage.get(), "txRollbackOnlyInErrorStorage: Mismatch in nr of transactions already marked rollback-only while moving to error storage."),
@@ -417,7 +433,6 @@ public class ReceiverTest {
 		ITransactionalStorage<Serializable> errorStorage = mock(ITransactionalStorage.class);
 		@SuppressWarnings("unchecked")
 		ITransactionalStorage<Serializable> messageLog = mock(ITransactionalStorage.class);
-
 		createMessagingSource(listener);
 
 		@SuppressWarnings("unchecked")
@@ -427,22 +442,16 @@ public class ReceiverTest {
 		receiver.setErrorStorage(errorStorage);
 		receiver.setMessageLog(messageLog);
 
-		final JtaTransactionManager txManager = configuration.getBean(JtaTransactionManager.class);
-		txManager.setDefaultTimeout(1);
-//		txManager.setDefaultTimeout(1000000); // Long timeout for debug, do not commit this timeout!! Should be 1
+		final PlatformTransactionManager txManager = configuration.getBean("txManagerReal", PlatformTransactionManager.class);
+		((AbstractPlatformTransactionManager)txManager).setDefaultTimeout(10);
+//		txManager.setDefaultTimeout(1000000); // Long timeout for debug, do not commit this timeout!! Should be 10
 
 		receiver.setTxManager(txManager);
 		receiver.setTransactionAttribute(TransactionAttribute.REQUIRED);
 
 		final int TEST_MAX_RETRIES = 2;
-		final int NR_TIMES_MESSAGE_OFFERED = TEST_MAX_RETRIES + 1;
+		final int MAX_NR_TIMES_MESSAGE_OFFERED = TEST_MAX_RETRIES + 3;
 		receiver.setMaxRetries(TEST_MAX_RETRIES);
-		receiver.setMaxDeliveries(TEST_MAX_RETRIES);
-
-		// assume there was no connectivity, the message was not able to be stored in the database, retryInterval keeps increasing.
-		final Field retryIntervalField = Receiver.class.getDeclaredField("retryInterval");
-		retryIntervalField.setAccessible(true);
-		retryIntervalField.set(receiver, 2);
 
 		Adapter adapter = setupAdapter(receiver, ExitState.ERROR);
 
@@ -465,9 +474,9 @@ public class ReceiverTest {
 
 		TextMessage jmsMessage = mock(TextMessage.class);
 		doReturn("dummy-message-id").when(jmsMessage).getJMSMessageID();
-		doAnswer(invocation -> rolledBackTXCounter.get() + 1).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
 		doReturn(Collections.emptyEnumeration()).when(jmsMessage).getPropertyNames();
 		doReturn("message").when(jmsMessage).getText();
+
 		RawMessageWrapper<jakarta.jms.Message> messageWrapper = new RawMessageWrapper<>(jmsMessage, "dummy-message-id", "dummy-cid");
 
 		ArgumentCaptor<String> messageIdCaptor = forClass(String.class);
@@ -480,8 +489,13 @@ public class ReceiverTest {
 			public void run() {
 				try {
 					int nrTries = 0;
-					while (nrTries++ < NR_TIMES_MESSAGE_OFFERED) {
-						final TransactionStatus tx = txManager.getTransaction(TRANSACTION_DEFINITION);
+					while (nrTries++ < MAX_NR_TIMES_MESSAGE_OFFERED && movedToErrorStorage.get() == 0) {
+						final int deliveryCount = nrTries;
+						doAnswer(invocation -> deliveryCount).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
+
+						LOG.info("Nr tries: {}, Nr rolled back transactions: {}, delivery count: {}", nrTries, rolledBackTXCounter.get(), receiver.getDeliveryCount(messageWrapper));
+						final TransactionStatus tx = txManager.getTransaction(TX_REQUIRES_NEW);
+						//noinspection unchecked
 						reset(errorStorage, listener);
 						when(errorStorage.storeMessage(messageIdCaptor.capture(), correlationIdCaptor.capture(), any(), any(), any(), messageCaptor.capture()))
 								.thenAnswer(invocation -> {
@@ -502,7 +516,7 @@ public class ReceiverTest {
 							if (tx.isRollbackOnly()) {
 								rolledBackTXCounter.incrementAndGet();
 							} else {
-								LOG.warn("I had expected TX to be marked for rollback-only by now?");
+								LOG.debug("Main TX not marked for rollback-only");
 							}
 							if (!tx.isCompleted()) {
 								// We do rollback inside the Receiver already but if the TX is aborted
@@ -510,10 +524,9 @@ public class ReceiverTest {
 								txNotCompletedAfterReceiverEnds.incrementAndGet();
 								txManager.rollback(tx);
 							}
-							retryIntervalField.set(receiver, 2); // To avoid test taking too long.
 						}
 					}
-				} catch (SenderException | IllegalAccessException| IllegalArgumentException e) {
+				} catch (SenderException | IllegalArgumentException | JMSException e) {
 					throw Lombok.sneakyThrow(e);
 				} finally {
 					semaphore.release();
@@ -525,19 +538,22 @@ public class ReceiverTest {
 		mockListenerThread.start();
 		semaphore.acquire(); // Wait until thread is finished.
 
-		((DisposableBean) txManager).destroy();
+		if (txManager instanceof DisposableBean disposableBean) {
+			disposableBean.destroy();
+		}
 
 		// Assert
+		int expectedNrTimesMessageActuallyOffered = receiver.getMaxRetries() + 2;
 		assertAll(
 			() -> assertEquals("dummy-message-id", messageIdCaptor.getValue(), "Message ID does not match"),
 			() -> assertEquals("dummy-cid", correlationIdCaptor.getValue(), "Correlation ID does not match"),
 			() -> assertEquals("message", ((MessageWrapper<?>)messageCaptor.getValue()).getMessage().asString(), "Message contents do not match"),
 			() -> assertEquals(0, rolledBackTXCounter.get(), "rolledBackTXCounter: Mismatch in nr of messages marked for rollback by TX manager"),
-			() -> assertEquals(NR_TIMES_MESSAGE_OFFERED, processedNoException.get(), "processedNoException: Mismatch in nr of messages processed without exception from receiver"),
+			() -> assertEquals(expectedNrTimesMessageActuallyOffered, processedNoException.get(), "processedNoException: Mismatch in nr of messages processed without exception from receiver"),
 			() -> assertEquals(0, txRollbackOnlyInErrorStorage.get(), "txRollbackOnlyInErrorStorage: Mismatch in nr of transactions already marked rollback-only while moving to error storage."),
 			() -> assertEquals(0, exceptionsFromReceiver.get(), "exceptionsFromReceiver: Mismatch in nr of exceptions from Receiver method"),
 			() -> assertEquals(1, movedToErrorStorage.get(), "movedToErrorStorage: Mismatch in nr of messages moved to error storage"),
-			() -> assertEquals(NR_TIMES_MESSAGE_OFFERED, txNotCompletedAfterReceiverEnds.get(), "txNotCompletedAfterReceiverEnds: Mismatch in nr of transactions not completed after receiver finishes")
+			() -> assertEquals(expectedNrTimesMessageActuallyOffered, txNotCompletedAfterReceiverEnds.get(), "txNotCompletedAfterReceiverEnds: Mismatch in nr of transactions not completed after receiver finishes")
 		);
 	}
 
@@ -545,7 +561,7 @@ public class ReceiverTest {
 	@Test
 	void testJmsMessageWithExceptionUntransactedAckModeClientShouldAckMsgWhenRejected() throws Exception {
 		// Arrange
-		configuration = buildConfiguration(null);
+		configuration = buildDataSourceTransactionManagerConfiguration();
 		PushingJmsListener listener = spy(configuration.createBean(PushingJmsListener.class));
 		listener.setTransacted(false);
 		//noinspection removal
@@ -561,7 +577,7 @@ public class ReceiverTest {
 		IListenerConnector<jakarta.jms.Message> jmsConnectorMock = mock(IListenerConnector.class);
 		listener.setJmsConnector(jmsConnectorMock);
 		Receiver<jakarta.jms.Message> receiver = setupReceiver(listener);
-		receiver.setMaxDeliveries(1);
+		receiver.setMaxRetries(1);
 
 		Adapter adapter = setupAdapter(receiver, ExitState.ERROR);
 
@@ -577,7 +593,7 @@ public class ReceiverTest {
 
 		TextMessage jmsMessage = mock(TextMessage.class);
 		doReturn("dummy-message-id").when(jmsMessage).getJMSMessageID();
-		doAnswer(invocation -> receiver.getMaxDeliveries() + 1).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
+		doAnswer(invocation -> receiver.getMaxRetries() + 2).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
 		doReturn(Collections.emptyEnumeration()).when(jmsMessage).getPropertyNames();
 		doReturn("message").when(jmsMessage).getText();
 		RawMessageWrapper<jakarta.jms.Message> messageWrapper = new RawMessageWrapper<>(jmsMessage, "dummy-message-id", "dummy-cid");
@@ -607,7 +623,7 @@ public class ReceiverTest {
 	@Test
 	void testGetDeliveryCountWithJmsListener() throws Exception {
 		// Arrange
-		configuration = buildConfiguration(null);
+		configuration = buildDataSourceTransactionManagerConfiguration();
 		PushingJmsListener listener = spy(configuration.createBean(PushingJmsListener.class));
 		doReturn(mock(Destination.class)).when(listener).getDestination();
 		doNothing().when(listener).open();
@@ -622,22 +638,67 @@ public class ReceiverTest {
 		@SuppressWarnings("unchecked")
 		IListenerConnector<jakarta.jms.Message> jmsConnectorMock = mock(IListenerConnector.class);
 		listener.setJmsConnector(jmsConnectorMock);
+		ConnectionFactoryFactoryMock connectionFactoryFactoryMock = new ConnectionFactoryFactoryMock();
+		listener.setConnectionFactoryFactory(connectionFactoryFactoryMock);
+		listener.setQueueConnectionFactoryName(ConnectionFactoryFactoryMock.MOCK_CONNECTION_FACTORY_NAME);
+		listener.setDestinationName("jms/dest_fake");
+		listener.setLookupDestination(false);
+
 		Receiver<jakarta.jms.Message> receiver = setupReceiver(listener);
 		receiver.setErrorStorage(errorStorage);
 		receiver.setMessageLog(messageLog);
+		receiver.configure();
+
+		// Should have 3 retries with JMS listeners
+		assertEquals(3, receiver.getMaxRetries());
 
 		TextMessage jmsMessage = mock(TextMessage.class);
 		doReturn("dummy-message-id").when(jmsMessage).getJMSMessageID();
-		doAnswer(invocation -> 5).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
 		doReturn(Collections.emptyEnumeration()).when(jmsMessage).getPropertyNames();
 		doReturn("message").when(jmsMessage).getText();
 		RawMessageWrapper<jakarta.jms.Message> rawMessage = new RawMessageWrapper<>(jmsMessage, "dummy-message-id", "dummy-cid");
+		MessageWrapper<jakarta.jms.Message> messageWrapper = new MessageWrapper<>(rawMessage, Message.nullMessage());
 
-		// Act
-		int result = receiver.getDeliveryCount(rawMessage);
+		doAnswer(invocation -> 5).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
 
-		// Assert
-		assertEquals(4, result);
+		// Act / Assert
+		assertAll(
+				()-> assertEquals(5, receiver.getDeliveryCount(rawMessage)),
+				()-> assertTrue(receiver.isDeliveryRetryLimitExceededBeforeMessageProcessing(rawMessage, new PipeLineSession(), false)),
+				()-> assertTrue(receiver.isDeliveryRetryLimitExceededAfterMessageProcessed(messageWrapper))
+		);
+
+		doAnswer(invocation -> receiver.getMaxRetries()).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
+		receiver.updateMessageReceiveCount(messageWrapper);
+
+		assertAll(
+				()-> assertFalse(receiver.isDeliveryRetryLimitExceededBeforeMessageProcessing(rawMessage, new PipeLineSession(), false)),
+				()-> assertFalse(receiver.isDeliveryRetryLimitExceededAfterMessageProcessed(messageWrapper))
+		);
+
+		doAnswer(invocation -> receiver.getMaxRetries()-1).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
+		receiver.updateMessageReceiveCount(messageWrapper);
+
+		assertAll(
+				()-> assertFalse(receiver.isDeliveryRetryLimitExceededBeforeMessageProcessing(rawMessage, new PipeLineSession(), false)),
+				()-> assertFalse(receiver.isDeliveryRetryLimitExceededAfterMessageProcessed(messageWrapper))
+		);
+
+		doAnswer(invocation -> receiver.getMaxRetries()+1).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
+		receiver.updateMessageReceiveCount(messageWrapper);
+
+		assertAll(
+				()-> assertFalse(receiver.isDeliveryRetryLimitExceededBeforeMessageProcessing(rawMessage, new PipeLineSession(), false)),
+				()-> assertTrue(receiver.isDeliveryRetryLimitExceededAfterMessageProcessed(messageWrapper))
+		);
+
+		doAnswer(invocation -> receiver.getMaxRetries()+2).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
+		receiver.updateMessageReceiveCount(messageWrapper);
+
+		assertAll(
+				()-> assertTrue(receiver.isDeliveryRetryLimitExceededAfterMessageProcessed(messageWrapper)),
+				()-> assertTrue(receiver.isDeliveryRetryLimitExceededBeforeMessageProcessing(rawMessage, new PipeLineSession(), false))
+		);
 	}
 
 	@Test
@@ -660,6 +721,7 @@ public class ReceiverTest {
 		txManager.setDefaultTimeout(1);
 		receiver.setTxManager(txManager);
 		receiver.setTransactionAttribute(TransactionAttribute.NOTSUPPORTED);
+		receiver.configure();
 
 		Adapter adapter = setupAdapter(receiver, ExitState.ERROR);
 		configuration.configure();
@@ -668,26 +730,25 @@ public class ReceiverTest {
 
 		final String messageId = "A Path";
 		RawMessageWrapper<String> rawMessageWrapper = new RawMessageWrapper<>("message", messageId, null);
+		MessageWrapper<String> messageWrapper = new MessageWrapper<>(rawMessageWrapper, Message.asMessage(rawMessageWrapper.rawMessage));
 
 		// Act
-		int result1 = receiver.getDeliveryCount(rawMessageWrapper);
-
-		// Assert
-		assertEquals(1, result1);
-
-		// Arrange (for 2nd invocation)
 		try (PipeLineSession session = new PipeLineSession()) {
 			session.put(PipeLineSession.MESSAGE_ID_KEY, messageId);
 			receiver.processRawMessage(listener, rawMessageWrapper, session, false);
 		} catch (Exception e) {
-			// We expected an exception here...
+			// Exception might occur here...
 		}
 
-		// Act
-		int result2 = receiver.getDeliveryCount(rawMessageWrapper);
+		int result = receiver.getDeliveryCount(rawMessageWrapper);
 
 		// Assert
-		assertEquals(2, result2);
+		assertAll(
+				()-> assertEquals(1, result),
+				()-> assertEquals(1, receiver.getMaxRetries()),
+				()-> assertFalse(receiver.isDeliveryRetryLimitExceededAfterMessageProcessed(messageWrapper)),
+				()-> assertFalse(receiver.isDeliveryRetryLimitExceededBeforeMessageProcessing(rawMessageWrapper, new PipeLineSession(), false))
+		);
 	}
 
 	@Test
@@ -747,10 +808,6 @@ public class ReceiverTest {
 
 		// start adapter
 		configuration.configure();
-//		configuration.start();
-//
-//		waitForState(adapter, RunState.STARTED);
-//		waitForState(receiver, RunState.STARTED);
 
 		ArgumentCaptor<Message> messageCaptor = forClass(Message.class);
 		ArgumentCaptor<PipeLineSession> sessionCaptor = forClass(PipeLineSession.class);
@@ -789,10 +846,6 @@ public class ReceiverTest {
 
 		// start adapter
 		configuration.configure();
-//		configuration.start();
-//
-//		waitForState(adapter, RunState.STARTED);
-//		waitForState(receiver, RunState.STARTED);
 
 		ArgumentCaptor<Message> messageCaptor = forClass(Message.class);
 		ArgumentCaptor<PipeLineSession> sessionCaptor = forClass(PipeLineSession.class);
@@ -881,13 +934,13 @@ public class ReceiverTest {
 
 	@Test
 	public void testPullingReceiverStartBasic() throws Exception {
-		configuration = buildConfiguration(null);
+		configuration = buildDataSourceTransactionManagerConfiguration();
 		testStartNoTimeout(setupSlowStartPullingListener(0));
 	}
 
 	@Test
 	public void testPushingReceiverStartBasic() throws Exception {
-		configuration = buildConfiguration(null);
+		configuration = buildDataSourceTransactionManagerConfiguration();
 		testStartNoTimeout(setupSlowStartPushingListener(0));
 	}
 
@@ -905,12 +958,12 @@ public class ReceiverTest {
 		waitWhileInState(adapter, RunState.STOPPED);
 		waitWhileInState(adapter, RunState.STARTING);
 
-		LOG.info("Adapter RunState "+adapter.getRunState());
+		LOG.info("Adapter RunState: {}", adapter.getRunState());
 		assertEquals(RunState.STARTED, adapter.getRunState());
 
-		waitWhileInState(receiver, RunState.STOPPED); //Ensure the next waitWhileInState doesn't skip when STATE is still STOPPED
-		waitWhileInState(receiver, RunState.STARTING); //Don't continue until the receiver has been started.
-		LOG.info("Receiver RunState "+receiver.getRunState());
+		waitWhileInState(receiver, RunState.STOPPED); // Ensure the next waitWhileInState doesn't skip when STATE is still STOPPED
+		waitWhileInState(receiver, RunState.STARTING); // Don't continue until the receiver has been started.
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
 
 		assertFalse(listener.isClosed()); // Not closed, thus open
 		assertFalse(receiver.getSender().isSynchronous()); // Not closed, thus open
@@ -919,13 +972,13 @@ public class ReceiverTest {
 
 	@Test
 	public void testPullingReceiverStartWithTimeout() throws Exception {
-		configuration = buildConfiguration(null);
+		configuration = buildDataSourceTransactionManagerConfiguration();
 		testStartTimeout(setupSlowStartPullingListener(10_000));
 	}
 
 	@Test
 	public void testPushingReceiverStartWithTimeout() throws Exception {
-		configuration = buildConfiguration(null);
+		configuration = buildDataSourceTransactionManagerConfiguration();
 		testStartTimeout(setupSlowStartPushingListener(10_000));
 	}
 
@@ -944,13 +997,13 @@ public class ReceiverTest {
 		waitWhileInState(adapter, RunState.STOPPED);
 		waitWhileInState(adapter, RunState.STARTING);
 
-		LOG.info("Adapter RunState " + adapter.getRunState());
+		LOG.info("Adapter RunState: {}", adapter.getRunState());
 		assertEquals(RunState.STARTED, adapter.getRunState());
 
 		waitWhileInState(receiver, RunState.STOPPED); //Ensure the next waitWhileInState doesn't skip when STATE is still STOPPED
 		waitWhileInState(receiver, RunState.STARTING); //Don't continue until the receiver has been started.
 
-		LOG.info("Receiver RunState " + receiver.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
 		assertEquals(RunState.EXCEPTION_STARTING, receiver.getRunState(), "Receiver should be in state [EXCEPTION_STARTING]");
 		await().atMost(500, TimeUnit.MILLISECONDS)
 						.until(()-> receiver.getSender().isSynchronous());
@@ -974,7 +1027,7 @@ public class ReceiverTest {
 		assumeFalse(TestAssertions.isTestRunningWithSurefire() || TestAssertions.isTestRunningOnCI(), "For unknown reasons this test is unreliable on Github and CI so only run locally for now until we have time to investigate");
 
 		// Arrange
-		configuration = buildConfiguration(null);
+		configuration = buildDataSourceTransactionManagerConfiguration();
 		SlowListenerBase listener = setupSlowStartPushingListener(1_000);
 		Receiver<jakarta.jms.Message> receiver = setupReceiver(listener);
 		Adapter adapter = setupAdapter(receiver);
@@ -999,7 +1052,7 @@ public class ReceiverTest {
 					.atMost(5, TimeUnit.SECONDS)
 					.pollInterval(1, TimeUnit.SECONDS)
 					.until(() -> {
-						LOG.info("<*> Receiver runstate: " + receiver.getRunState());
+						LOG.info("<*> Receiver runstate: {}", receiver.getRunState());
 						return adapter.getRunState() == RunState.STOPPED;
 					});
 
@@ -1042,15 +1095,15 @@ public class ReceiverTest {
 		waitWhileInState(adapter, RunState.STOPPED);
 		waitWhileInState(adapter, RunState.STARTING);
 
-		LOG.info("Adapter RunState "+adapter.getRunState());
-		LOG.info("Receiver RunState "+receiver.getRunState());
-		waitForState(receiver, RunState.STARTED); //Don't continue until the receiver has been started.
+		LOG.info("Adapter RunState: {}", adapter.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
+		waitForState(receiver, RunState.STARTED); // Don't continue until the receiver has been started.
 
 		configuration.getIbisManager().handleAction(Action.STOPRECEIVER, configuration.getName(), adapter.getName(), receiver.getName(), null, true);
 
 		waitWhileInState(receiver, RunState.STARTED);
 		waitWhileInState(receiver, RunState.STOPPING);
-		LOG.info("Receiver RunState "+receiver.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
 
 		assertEquals(RunState.EXCEPTION_STOPPING, receiver.getRunState());
 		assertEquals(RunState.STARTED, adapter.getRunState());
@@ -1082,15 +1135,15 @@ public class ReceiverTest {
 		waitWhileInState(adapter, RunState.STOPPED);
 		waitWhileInState(adapter, RunState.STARTING);
 
-		LOG.info("Adapter RunState "+adapter.getRunState());
-		LOG.info("Receiver RunState "+receiver.getRunState());
-		waitForState(receiver, RunState.STARTED); //Don't continue until the receiver has been started.
+		LOG.info("Adapter RunState: {}", adapter.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
+		waitForState(receiver, RunState.STARTED); // Don't continue until the receiver has been started.
 
 		configuration.getIbisManager().handleAction(Action.STOPRECEIVER, configuration.getName(), adapter.getName(), receiver.getName(), null, true);
 
 		waitWhileInState(receiver, RunState.STARTED);
 		waitWhileInState(receiver, RunState.STOPPING);
-		LOG.info("Receiver RunState "+receiver.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
 
 		assertEquals(RunState.EXCEPTION_STOPPING, receiver.getRunState());
 	}
@@ -1118,8 +1171,8 @@ public class ReceiverTest {
 		waitWhileInState(adapter, RunState.STOPPED);
 		waitWhileInState(adapter, RunState.STARTING);
 
-		LOG.info("Adapter RunState " + adapter.getRunState());
-		LOG.info("Receiver RunState " + receiver.getRunState());
+		LOG.info("Adapter RunState: {}", adapter.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
 		assertEquals(RunState.STARTED, adapter.getRunState());
 
 		waitForState(receiver, RunState.STARTED); //Don't continue until the receiver has been started.
@@ -1139,7 +1192,7 @@ public class ReceiverTest {
 				.stream()
 				.filter(msg -> msg != null && "ERROR".equals(msg.getMessageLevel()))
 				.map(Object::toString)
-				.collect(Collectors.toList());
+				.toList();
 
 		assertThat(errors, hasItem(containsString("Failed to restart receiver")));
 
@@ -1148,7 +1201,7 @@ public class ReceiverTest {
 
 		waitWhileInState(receiver, RunState.STARTED);
 		waitWhileInState(receiver, RunState.STOPPING);
-		LOG.info("Receiver RunState "+receiver.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
 
 		assertEquals(RunState.STOPPED, receiver.getRunState());
 	}
@@ -1174,8 +1227,8 @@ public class ReceiverTest {
 		waitWhileInState(adapter, RunState.STOPPED);
 		waitWhileInState(adapter, RunState.STARTING);
 
-		LOG.info("Adapter RunState "+adapter.getRunState());
-		LOG.info("Receiver RunState "+receiver.getRunState());
+		LOG.info("Adapter RunState: {}", adapter.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
 		assertEquals(RunState.STARTED, adapter.getRunState());
 
 		waitForState(receiver, RunState.STARTED); //Don't continue until the receiver has been started.
@@ -1194,21 +1247,21 @@ public class ReceiverTest {
 
 		waitWhileInState(receiver, RunState.STARTED);
 		waitWhileInState(receiver, RunState.STOPPING);
-		LOG.info("Receiver RunState "+receiver.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
 
 		assertEquals(RunState.EXCEPTION_STOPPING, receiver.getRunState());
 
 		List<String> warnings = new ArrayList<>(adapter.getMessageKeeper())
 				.stream()
-				.filter(msg -> msg instanceof MessageKeeperMessage && "WARN".equals(msg.getMessageLevel()))
+				.filter(msg -> msg != null && "WARN".equals(msg.getMessageLevel()))
 				.map(Object::toString)
-				.collect(Collectors.toList());
+				.toList();
 		assertThat(warnings, everyItem(containsString("JMS poll timeout")));
 	}
 
 	@Test
 	public void startReceiver() throws Exception {
-		configuration = buildConfiguration(null);
+		configuration = buildDataSourceTransactionManagerConfiguration();
 		Receiver<jakarta.jms.Message> receiver = setupReceiver(setupSlowStartPullingListener(10_000));
 		receiver.setStartTimeout(1);
 		Adapter adapter = setupAdapter(receiver);
@@ -1225,12 +1278,12 @@ public class ReceiverTest {
 		waitWhileInState(receiver, RunState.STOPPED);
 		waitWhileInState(receiver, RunState.STARTING);
 
-		LOG.info("Adapter RunState " + adapter.getRunState());
-		LOG.info("Receiver RunState " + receiver.getRunState());
+		LOG.info("Adapter RunState: {}", adapter.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
 
 		// stop receiver then start
 		Semaphore semaphore = new Semaphore(0);
-		SimpleAsyncTaskExecutor taskExecutor = new SimpleAsyncTaskExecutor();
+		TaskExecutor taskExecutor = configuration.getApplicationContext().getBean("taskExecutor", TaskExecutor.class);
 		taskExecutor.execute(()-> {
 			try {
 				LOG.debug("Stopping receiver [{}] from executor-thread.", receiver.getName());
@@ -1299,5 +1352,123 @@ public class ReceiverTest {
 
 		// Assert
 		assertEquals(result, message);
+	}
+
+	@ParameterizedTest
+	@CsvSource({
+			"500, 50, true",
+			"50, 50, false",
+			"40, 40, false"
+	})
+	public void testMaxBackoffDelayAdjustment(Integer maxBackoffDelay, int expectedBackoffDelay, boolean expectConfigWarning) throws Exception {
+		// Arrange
+		configuration = buildDataSourceTransactionManagerConfiguration();
+		Adapter adapter = configuration.createBean(Adapter.class);
+		adapter.setName("adapter");
+		ConfigurationWarnings configWarnings = new ConfigurationWarnings();
+		ApplicationContext applicationContext = mock();
+		when(applicationContext.getClassLoader()).thenReturn(this.getClass().getClassLoader());
+		when(applicationContext.getBean("configurationWarnings", ConfigurationWarnings.class)).thenReturn(configWarnings);
+		adapter.setApplicationContext(applicationContext);
+		configWarnings.setApplicationContext(applicationContext);
+		configWarnings.afterPropertiesSet();
+
+		Receiver<String> receiver = new Receiver<>();
+
+		receiver.setAdapter(adapter);
+		receiver.setMaxBackoffDelay(maxBackoffDelay);
+		receiver.setTransactionTimeout(100);
+
+		// Act
+		int actualBackoffDelay = receiver.calculateAdjustedMaxBackoffDelay(maxBackoffDelay);
+
+		// Assert
+		assertEquals(expectedBackoffDelay, actualBackoffDelay);
+		if (expectConfigWarning) {
+			assertEquals(1, configWarnings.size(), "There should have been exactly 1 config warning");
+			assertThat(configWarnings.get(0), containsString("Maximum backoff delay reduced"));
+		} else {
+			assertTrue(configWarnings.isEmpty(), "There should not have been any config warnings");
+		}
+	}
+
+	@ParameterizedTest
+	@MethodSource("transactionManagers")
+	void testJmsMessageTransactionRollbackAfterListenerCompleted(Supplier<TestConfiguration> configurationSupplier) throws Exception {
+		// Arrange
+		configuration = configurationSupplier.get();
+		PushingJmsListener listener = spy(configuration.createBean(PushingJmsListener.class));
+		doReturn(mock(Destination.class)).when(listener).getDestination();
+		doNothing().when(listener).open();
+		doNothing().when(listener).configure();
+
+		@SuppressWarnings("unchecked")
+		ITransactionalStorage<Serializable> errorStorage = mock(ITransactionalStorage.class);
+
+		createMessagingSource(listener);
+
+		@SuppressWarnings("unchecked")
+		IListenerConnector<jakarta.jms.Message> jmsConnectorMock = mock(IListenerConnector.class);
+		listener.setJmsConnector(jmsConnectorMock);
+		Receiver<jakarta.jms.Message> receiver = setupReceiver(listener);
+		receiver.setErrorStorage(errorStorage);
+
+		final PlatformTransactionManager txManager = configuration.getBean("txManagerReal", PlatformTransactionManager.class);
+		receiver.setTxManager(txManager);
+		receiver.setTransactionAttribute(TransactionAttribute.REQUIRED);
+
+		Adapter adapter = setupAdapter(receiver);
+
+		assertEquals(RunState.STOPPED, adapter.getRunState());
+		assertEquals(RunState.STOPPED, receiver.getRunState());
+
+		// start adapter
+		configuration.configure();
+		configuration.start();
+
+		waitWhileInState(adapter, RunState.STOPPED);
+		waitWhileInState(adapter, RunState.STARTING);
+
+		TextMessage jmsMessage = mock(TextMessage.class);
+		doReturn("dummy-message-id").when(jmsMessage).getJMSMessageID();
+		doReturn(1).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
+		doReturn(Collections.emptyEnumeration()).when(jmsMessage).getPropertyNames();
+		doReturn("message").when(jmsMessage).getText();
+		RawMessageWrapper<jakarta.jms.Message> messageWrapper = new RawMessageWrapper<>(jmsMessage, "dummy-message-id", "dummy-cid");
+
+		final TransactionStatus tx = txManager.getTransaction(TX_REQUIRES_NEW);
+		TransactionSynchronizationManager.registerSynchronization(new TransactionSynchronization() {
+			@Override
+			public void beforeCommit(boolean readOnly) {
+				throw new RuntimeException("Sabotage the TX commit");
+			}
+		});
+
+		// No errors before we start
+		assertEquals(0, adapter.getNumOfMessagesInError());
+
+		// Act
+		try (PipeLineSession session = new PipeLineSession()) {
+			receiver.processRawMessage(listener, messageWrapper, session, false);
+		} catch (Exception e) {
+			fail("Caught exception in Receiver:", e);
+		}
+		// Still no errors before we commit
+		assertEquals(0, adapter.getNumOfMessagesInError());
+
+		assertThrows(RuntimeException.class, () -> txManager.commit(tx));
+
+		// A bit of cleanup
+		if (txManager instanceof DisposableBean disposableBean) {
+			disposableBean.destroy();
+		}
+
+		configuration.getIbisManager().handleAction(Action.STOPADAPTER, configuration.getName(), adapter.getName(), receiver.getName(), null, true);
+		waitForState(adapter, RunState.STOPPED);
+
+		// Assert
+		// The commit should have set the message in error
+		assertEquals(1, adapter.getNumOfMessagesInError());
+
 	}
 }
